# RambamBot

./: .pylintrc  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  rambam.py
.github/workflows/: pylint.yml
helpers/: __init__.py  helpers.py  keywordmessageparser.py  pycord_helpers.py
rambam/: rambam.py
rambam/helpers/: pycord_helpers.py
rambam/sources/: __init__.py  bibleapi.py  biblegateway.py  filmot.py
sources/: __init__.py  bibleapi.py  biblegateway.py  filmot.py  sefaria.py
